[package]
name = "advent_of_code_2021"
version = "0.1.0"
authors = ["Shoya Taguchi <shoyataguchi0@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "d1_1"
path = "src/d1_1.rs"

[[bin]]
name = "d1_2"
path = "src/d1_2.rs"

[[bin]]
name = "d2_1"
path = "src/d2_1.rs"

[[bin]]
name = "d2_2"
path = "src/d2_2.rs"

[[bin]]
name = "d3_1"
path = "src/d3_1.rs"

[[bin]]
name = "d3_2"
path = "src/d3_2.rs"

[[bin]]
name = "d4_1"
path = "src/d4_1.rs"

[[bin]]
name = "d4_2"
path = "src/d4_2.rs"

[[bin]]
name = "d5_1"
path = "src/d5_1.rs"

[[bin]]
name = "d5_2"
path = "src/d5_2.rs"

[[bin]]
name = "d6_1"
path = "src/d6_1.rs"

[[bin]]
name = "d6_2"
path = "src/d6_2.rs"

[[bin]]
name = "d7_1"
path = "src/d7_1.rs"

[[bin]]
name = "d7_2"
path = "src/d7_2.rs"

[dependencies]
cached = "0.26.2"
