[package]
name = "advent_of_code_2021"
version = "0.1.0"
authors = ["Shoya Taguchi <shoyataguchi0@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "d1_1"
path = "src/d1_1.rs"

[[bin]]
name = "d1_2"
path = "src/d1_2.rs"

[[bin]]
name = "d2_1"
path = "src/d2_1.rs"

[[bin]]
name = "d2_2"
path = "src/d2_2.rs"

[[bin]]
name = "d3_1"
path = "src/d3_1.rs"

[[bin]]
name = "d3_2"
path = "src/d3_2.rs"

[[bin]]
name = "d4_1"
path = "src/d4_1.rs"

[[bin]]
name = "d4_2"
path = "src/d4_2.rs"

[[bin]]
name = "d5_1"
path = "src/d5_1.rs"

[[bin]]
name = "d5_2"
path = "src/d5_2.rs"

[[bin]]
name = "d6_1"
path = "src/d6_1.rs"

[[bin]]
name = "d6_2"
path = "src/d6_2.rs"

[[bin]]
name = "d7_1"
path = "src/d7_1.rs"

[[bin]]
name = "d7_2"
path = "src/d7_2.rs"

[[bin]]
name = "d8_1"
path = "src/d8_1.rs"

[[bin]]
name = "d8_2"
path = "src/d8_2.rs"

[[bin]]
name = "d9_1"
path = "src/d9_1.rs"

[[bin]]
name = "d9_2"
path = "src/d9_2.rs"

[[bin]]
name = "d10_1"
path = "src/d10_1.rs"

[[bin]]
name = "d10_2"
path = "src/d10_2.rs"

[[bin]]
name = "d11_1"
path = "src/d11_1.rs"

[[bin]]
name = "d11_2"
path = "src/d11_2.rs"

[[bin]]
name = "d12_1"
path = "src/d12_1.rs"

[[bin]]
name = "d12_2"
path = "src/d12_2.rs"

[[bin]]
name = "d12_2_cached"
path = "src/d12_2_cached.rs"

[[bin]]
name = "d13_1"
path = "src/d13_1.rs"

[[bin]]
name = "d13_2"
path = "src/d13_2.rs"

[[bin]]
name = "d14_1"
path = "src/d14_1.rs"

[[bin]]
name = "d14_2"
path = "src/d14_2.rs"

[[bin]]
name = "d15_1"
path = "src/d15_1.rs"

[[bin]]
name = "d15_2"
path = "src/d15_2.rs"

[[bin]]
name = "d16_1"
path = "src/d16_1.rs"

[[bin]]
name = "d16_2"
path = "src/d16_2.rs"

[[bin]]
name = "d17_1"
path = "src/d17_1.rs"

[[bin]]
name = "d17_2"
path = "src/d17_2.rs"

[dependencies]
cached = "0.26.2"
maplit = "1.0.2"
