[package]
name = "demandy_leonard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
flexi_logger = "0.22.2"
log = "0.4"
chrono = "0.4"
tokio = { version = "1.15.0", features = ["full"] }
tokio_schedule = "0.3.0"
reqwest = { version = "0.11", features = ["json"] }
maplit = "1.0.2"
lazy_static = "1.4.0"
cached = "0.30.0"
serde = { version = "1.0.134", features = ["derive"] }
base64 = "0.13.0"

[features]
dev = []