[package]
name = "smart_leonard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
flexi_logger = "0.22.2"
log = "0.4"
tokio = { version = "1.15.0", features = ["full"] }
serenity = "0.10"
maplit = "1.0.2"
lazy_static = "1.4.0"
titlecase = "1.0"
indoc = "1.0"
md5 = "0.7.0"
serde = { version = "1.0.134", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
cached = "0.30.0"